--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,14 @@
     margin: 0;
 }
 
+html {
+    font-family: 'Open Sans', 'Sans serif';
+}
+
+body {
+    font-size: 12px;
+}
+
 header {
     display: flex;
     justify-content: center;
@@ -21,6 +29,7 @@ input[type="text"] {
     height: 30px;
     width: 220px;
     border-radius: 3px;
+    margin: 0 5px;
 }
 
 input[type="submit"] {
@@ -31,4 +40,86 @@ input[type="submit"] {
     width: 100px;
     height: 40px;
     border-radius: 3px;
+    margin: 0 5px;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+article, h1 {
+    text-align: center;
+    padding: 10px;
+}
+
+article {
+    margin-bottom: 20px;
+}
+
+section {
+    width: 50%;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #b5b5b5;
+    padding: 8px;
+}
+
+.firstname, .lastname {
+    width: 150px;
+}
+
+th.firstname, th.lastname {
+    text-align: left;
+}
+
+.participation {
+    text-align: center;
+}
+
+aside {
+    width: 50%;
+}
+
+.rosquinha {
+    border: 1px solid #000000;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+}
+
+.fatia1 {
+    border: 1px solid #ffffff;
+    background-color: #2d97de;
+    width: 20%;
+    height: 20%;
+}
+.fatia2 {
+    border: 1px solid #ffffff;
+    background-color: #b2b4b4;
+    width: 15%;
+    height: 15%;
+}
+.fatia3 {
+    border: 1px solid #ffffff;
+    background-color:#9c55b8;
+    width: 20%;
+    height: 20%;
+}
+.fatia4 {
+    border: 1px solid #ffffff;
+    background-color: #00bc9c;
+    width: 5%;
+    height: 5%;
+}
+.fatia5 {
+    border: 1px solid #ffffff;
+    background-color: #e94a35;
+    width: 40%;
+    height: 40%;
 }
